# computer

./: CMakeLists.txt  cpu.cpp  gpu.cpp  gpu.h  kbd.cpp  main.cpp  ram.h
include/: cpu.h  disk.h  kbd.h
src/: CMakeLists.txt  disk.cpp  main.cpp  ram.cpp
